--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,9 @@ services:
       - ./docker/db/sql:/docker-entrypoint-initdb.d
     ports:
       - 3306:3306
-
-  # volumes:
-  #   db-data:
-  #   driver: local
+  proxy:
+    build: ./nginx
+    ports:
+      - 8082:80
+    depends_on:
+      - app
