--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3' # composeファイルのバーション指定
 services:
   app: # service名
-    build: . # ビルドに使用するDockerfileがあるディレクトリ指定
+    build: ./Docker/go # ビルドに使用するDockerfileがあるディレクトリ指定
     tty: true # コンテナの起動永続化
     ports:
       - "2500:2500" #Port番号8080
@@ -27,8 +27,18 @@ services:
     ports:
       - 3306:3306
   proxy:
-    build: ./nginx
+    build: ./Docker/nginx
     ports:
       - 8082:80
+    depends_on:
+      - app
+  vue:
+    build: ./Docker/Vue
+    container_name: dockerVue
+    ports:
+      - 2600:2600
+    volumes:
+      - .:/app/
+      # - ./app/node_modiles
     depends_on:
       - app
