--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,7 @@ services:
     build: ./Docker/Vue
     container_name: dockerVue
     ports:
-      - 2600:2600
+      - 8080:8080
     volumes:
-      - .:/app/
-    depends_on:
-      - app
+      - ./ui:/app
+    command: npm run serve
