--- a/docker/go/Dockerfile
+++ b/docker/go/Dockerfile
@@ -10,3 +10,4 @@ ADD . /go/src/work
 RUN go get github.com/gin-gonic/gin
 RUN go get github.com/jinzhu/gorm
 RUN go get github.com/go-sql-driver/mysql
+RUN go get github.com/gin-contrib/cors
